--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.8"
 
 services:
   web:
-    build: .
-    command: uvicorn main:app --port 3000
+    build: ./valutes_rates
+    command: uvicorn main:app --host 0.0.0.0 --port 3000
     volumes:
-      - ./:/usr/src/app/
+      - ./valutes_rates:/usr/src/app/
     ports:
       - "3000:3000"
