--- a/valutes_rates/requirements.txt
+++ b/valutes_rates/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.7.4.post0
+aioresponses==0.7.2
 asgiref==3.4.1
 async-timeout==3.0.1
 attrs==21.2.0
@@ -8,13 +9,24 @@ charset-normalizer==2.0.4
 click==8.0.1
 h11==0.12.0
 idna==3.2
+iniconfig==1.1.1
 multidict==5.1.0
+packaging==21.0
+pluggy==1.0.0
 protobuf==3.17.3
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-aiohttp==0.3.0
+requests==2.26.0
 six==1.16.0
+soupsieve==2.2.1
 structlog==21.1.0
+toml==0.10.2
 twirp==0.0.4
 typing-extensions==3.10.0.2
 urllib3==1.26.6
 uvicorn==0.15.0
+valutes-protobuf==0.0.1
 xmltodict==0.12.0
 yarl==1.6.3
